--- a/HouseDemo/wear/src/main/res/values/LungNodule.xml
+++ b/HouseDemo/wear/src/main/res/values/LungNodule.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string-array name="Options_X">
-        <item>Nodule_Size</item>
-    </string-array>
-
-    <string-array name="Options_Y">
-        <item>Low_Risk_Patient</item>
-        <item>High_Risk_Patient</item>
-    </string-array>
-
-    <string-array name="Nodule_Size">
-        <item>less than 4</item>
-        <item>4-6</item>
-        <item>6-8</item>
-        <item>greater than 8</item>
-    </string-array>
+    <integer-array name="Nodule_Size">
+        <item>4</item>
+        <!-- less than 4-->
+        <item>6</item>
+        <!-- 4-6-->
+        <item>8</item>
+        <!-- 6-8-->
+        <item>1000000</item>
+        <!-- more than 8-->
+    </integer-array>
 
     <string-array name="Low_Risk_Patient">
         <item>No follow up needed</item>
