--- a/HouseDemo/wear/src/main/res/layout/activity_fetal_demise.xml
+++ b/HouseDemo/wear/src/main/res/layout/activity_fetal_demise.xml
@@ -7,4 +7,5 @@
     app:rectLayout="@layout/rect_activity_fetal_demise"
     app:roundLayout="@layout/round_activity_fetal_demise"
     tools:context="com.yukti.housedemo.FetalDemiseActivity"
-    tools:deviceIds="wear"></android.support.wearable.view.WatchViewStub>
+    tools:deviceIds="wear"
+    android:keepScreenOn="true"></android.support.wearable.view.WatchViewStub>
